Closed
Bug 454116
Opened 17 years ago
Closed 17 years ago
Potential Memory Allocation Failures in WinMobile
Categories
(Firefox Build System :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: wolfe, Assigned: wolfe)
References
Details
(Keywords: mobile)
Attachments
(1 file, 1 obsolete file)
23.16 KB,
patch
|
dougt
:
review+
|
Details | Diff | Splinter Review |
We need some way to check on potential memory shortage within XULRunner on WinMobile devices / emulators.
This bug also has a patch attached. The patch has a very simple memory allocation check, output (to a WinCE shunt debug log file) in a format which allows easy grep and redirect into a comma-delimited file. The comma-delimited file can then be read into an Excel program (or equivalent) to graphically view total system memory usage (XULRunner, fennec, and everything else running at the same time).
Attachment #337363 -
Flags: review?(doug.turner)
Updated•17 years ago
|
Attachment #337363 -
Flags: review?(doug.turner) → review-
Comment 1•17 years ago
|
||
Comment on attachment 337363 [details] [diff] [review]
Memory Leak Metering and Shunt debug log file output
// comma-delimited-text-file input into excel
what is excel? use gnuplot, it will save you like 500 dollars.
Where are these defined:
+#ifdef SHUNT_LOG_ENABLED
+ void mozce_DebugInit();
+ void mozce_DebugDeinit();
+ void mozce_DebugWriteToLog(char * str);
+#endif
spacing is off here:
+#ifdef WINCE_MEMORY_CHECKPOINTING
+ MOZCE_SHUNT_API void mozce_MemoryCheckpoint();
otherwise looks fine.
Updated•17 years ago
|
Assignee: nobody → wolfe
Flags: blocking-fennec1.0+
Target Milestone: --- → Fennec A2
Assignee | ||
Comment 2•17 years ago
|
||
I have to check out gnuplot - I have been paying too much for my spreadsheets...
Where are these defined:
+#ifdef SHUNT_LOG_ENABLED
+ void mozce_DebugInit();
+ void mozce_DebugDeinit();
+ void mozce_DebugWriteToLog(char * str);
+#endif
These functions are defined in a file named mozce_dbg.c -- added by patch 337357 inside bug 444485 - Make WinMobile Build work with Visual Studio 2008 (VS9).
Somehow, my dependency of this bug on the patch from bug 444485 did not get retained.
I will be adding back the dependency as soon as I file this attachment.
Attachment #337363 -
Attachment is obsolete: true
Attachment #338668 -
Flags: review?(doug.turner)
Assignee | ||
Comment 3•17 years ago
|
||
Requires bug patch for adding Visual Studio 9 support to mozilla-central.
Depends on: 444485
Updated•17 years ago
|
Attachment #338668 -
Flags: review?(doug.turner) → review+
Comment 4•17 years ago
|
||
checked in on Tue Sep 23 21:10:58 2008 -0700
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Component: General → Build Config
Product: Fennec → Core
QA Contact: general → build-config
Target Milestone: Fennec A2 → ---
Updated•7 years ago
|
Product: Core → Firefox Build System
You need to log in
before you can comment on or make changes to this bug.
Description
•