Bug 454116 - Potential Memory Allocation Failures in WinMobile. patch by wolfe. r=dougt